basiliq/src/serve/tests/requests/create/snapshots/basiliq__serve__tests__requests__create__include__include_single_rel_sparsing_none.snap
---
source: basiliq/src/serve/tests/requests/create/include.rs
expression: res

---
{
  "jsonapi": {
    "version": "1.0"
  },
  "data": {
    "type": "public__peoples",
    "id": "[uuid]",
    "attributes": {
      "age": null,
      "first-name": "AAAAA",
      "gender": null,
      "last-name": "BBBBBBB",
      "twitter": null
    },
    "relationships": {
      "public__favorite_color": {
        "data": {
          "type": "public__favorite_color",
          "id": "[uuid]"
        }
      }
    }
  },
  "included": [
    {
      "type": "public__favorite_color",
      "id": "[uuid]"
    }
  ]
}
